一个小型论坛

--- a/BBS/WebContent/css/rigister.css
+++ b/BBS/WebContent/css/rigister.css
@@ -29,5 +29,5 @@
 /*	background-color: #FFFFFF;
 background-image: url(../img/shuzi2.gif);*/
     background-size:100%;
-	background-image: url(../img/xuan.jpg);
+	background-image: url(../img/bg1.jpg);
 }
